# governed-agent-platform

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  pyproject.toml
apps/api/app/: demo.py  main.py  models.py
apps/api/tests/: conftest.py  test_approvals_and_trace.py  test_demo_api.py  test_health.py
apps/console/: __init__.py  package.json
apps/console/app/: globals.css  layout.tsx  page.tsx
apps/console/app/approvals/[approvalId]/: page.tsx
apps/console/app/components/: ApprovalCard.tsx  EvalReport.tsx  OperatorHome.tsx  TraceTimeline.tsx
apps/console/app/evals/[evalRunId]/: page.tsx
apps/console/app/lib/: api.ts
apps/console/app/runs/[runId]/: page.tsx
data/seed/: README.md  customers.json  docs.json  incidents.json  tickets.json
docs/: eval-strategy.md
docs/adrs/: 001-single-agent-v1.md  002-why-ai-gateway.md  003-approval-gated-actions.md  004-evals-in-v1.md  005-minimal-runtime.md  006-python-stack-decision.md
scripts/: README.md  run_demo.py  run_evals.py  seed_data.py
