[project]
name = "governed-agent-platform"
version = "0.1.0"
description = "Production-style monorepo for a governed single-agent orchestration platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.11,<3.0",
  "pytest>=8.3,<9.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
